# convergio-http-bridge

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-http-bridge/: Cargo.toml
crates/convergio-http-bridge/src/: ext.rs  handlers.rs  health.rs  lib.rs  proxy.rs  schema.rs  store.rs  store_tests.rs  types.rs  webhook.rs
docs/adr/: 001-extraction.md
